tests/baselines/reference/staticsNotInScopeInClodule.errors.txt
staticsNotInScopeInClodule.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
staticsNotInScopeInClodule.ts(6,13): error TS2304: Cannot find name 'x'.


==== staticsNotInScopeInClodule.ts (2 errors) ====
    class Clod {
        static x = 10;
    }
    
    module Clod {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var p = x; // x isn't in scope here
                ~
!!! error TS2304: Cannot find name 'x'.
    }